--- a/tests/buildkite/pipeline.yml
+++ b/tests/buildkite/pipeline.yml
@@ -26,18 +26,17 @@ steps:
     key: run-clang-tidy
     agents:
       queue: linux-amd64-cpu
-  - wait
   - label: ":console: Build CPU"
     command: "tests/buildkite/build-cpu.sh"
     key: build-cpu
     agents:
       queue: linux-amd64-cpu
-  - label: ":console: Build CPU ARM64"
+  - label: ":console: Build CPU ARM64 + manylinux2_28_aarch64 wheel"
     command: "tests/buildkite/build-cpu-arm64.sh"
     key: build-cpu-arm64
     agents:
       queue: linux-arm64-cpu
-  - label: ":console: Build CUDA"
+  - label: ":console: Build CUDA + manylinux2_28_x86_64 wheel"
     command: "tests/buildkite/build-cuda.sh"
     key: build-cuda
     agents:
@@ -62,6 +61,16 @@ steps:
     key: build-jvm-doc
     agents:
       queue: linux-amd64-cpu
+  - label: ":console: Build manylinux2014_x86_64 wheel"
+    command: "tests/buildkite/build-manylinux2014-x86_64.sh"
+    key: build-manylinux2014-x86_64
+    agents:
+      queue: linux-amd64-cpu
+  - label: ":console: Build manylinux2014_aarch64 wheel"
+    command: "tests/buildkite/build-manylinux2014-aarch64.sh"
+    key: build-manylinux2014-aarch64
+    agents:
+      queue: linux-amd64-arm64
   - wait
   #### -------- TEST --------
   - label: ":console: Test Python package, CPU"
