--- a/tests/buildkite/pipeline.yml
+++ b/tests/buildkite/pipeline.yml
@@ -31,12 +31,12 @@ steps:
     key: build-cpu
     agents:
       queue: linux-amd64-cpu
-  - label: ":console: Build CPU ARM64 + manylinux2_28_aarch64 wheel"
+  - label: ":console: Build CPU ARM64 + manylinux_2_28_aarch64 wheel"
     command: "tests/buildkite/build-cpu-arm64.sh"
     key: build-cpu-arm64
     agents:
       queue: linux-arm64-cpu
-  - label: ":console: Build CUDA + manylinux2_28_x86_64 wheel"
+  - label: ":console: Build CUDA + manylinux_2_28_x86_64 wheel"
     command: "tests/buildkite/build-cuda.sh"
     key: build-cuda
     agents:
