--- a/tests/ci_build/Dockerfile.manylinux2014_aarch64
+++ b/tests/ci_build/Dockerfile.manylinux2014_aarch64
@@ -3,7 +3,7 @@ FROM quay.io/pypa/manylinux2014_aarch64
 # Install lightweight sudo (not bound to TTY)
 ENV GOSU_VERSION 1.10
 RUN set -ex; \
-    curl -o /usr/local/bin/gosu -L "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64" && \
+    curl -o /usr/local/bin/gosu -L "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-arm64" && \
     chmod +x /usr/local/bin/gosu && \
     gosu nobody true
 
