--- a/tests/buildkite/pipeline-mac-m1.yml
+++ b/tests/buildkite/pipeline-mac-m1.yml
@@ -1,7 +1,7 @@
 steps:
   - block: ":rocket: Run this test job"
     if: build.pull_request.id != null || build.branch =~ /^dependabot\//
-  - label: ":macos: Build XGBoost4J for MacOS M1"
+  - label: ":macos: Build libxgboost4j.dylib for MacOS M1"
     command: "tests/buildkite/build-jvm-macos-m1.sh"
     key: mac-m1-jvm
     agents:
