--- a/tests/buildkite/pipeline.yml
+++ b/tests/buildkite/pipeline.yml
@@ -56,6 +56,11 @@ steps:
     key: build-jvm-packages
     agents:
       queue: linux-amd64-cpu
+  - label: ":console: Build libxgboost4j.so for Linux ARM64"
+    command: "tests/buildkite/build-jvm-linux-arm64.sh"
+    key: build-jvm-linux-arm64
+    agents:
+      queue: linux-arm64-cpu
   - label: ":console: Build JVM package doc"
     command: "tests/buildkite/build-jvm-doc.sh"
     key: build-jvm-doc
