--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -186,7 +186,8 @@ jobs:
         architecture: 'x64'
     - name: Install Python packages
       run: |
-        python -m pip install wheel setuptools cmakelint cpplint pylint
+        # https://github.com/pylint-dev/pylint/issues/9751
+        python -m pip install wheel setuptools cmakelint cpplint pylint<3.2.4
     - name: Run lint
       run: |
         python3 tests/ci_build/lint_cpp.py
