--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -187,7 +187,7 @@ jobs:
     - name: Install Python packages
       run: |
         # https://github.com/pylint-dev/pylint/issues/9751
-        python -m pip install wheel setuptools cmakelint cpplint pylint<3.2.4
+        python -m pip install wheel setuptools cmakelint cpplint 'pylint<3.2.4'
     - name: Run lint
       run: |
         python3 tests/ci_build/lint_cpp.py
