--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -22,7 +22,7 @@ jobs:
         envs: 'MYTOKEN MYTOKEN2'
         usesh: true
         prepare: |
-          pkg install -y cmake git ninja-build googletest
+          pkg install -y cmake git ninja googletest
 
         run: |
           pwd
