--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -15,6 +15,8 @@ jobs:
     name: A job to run test in FreeBSD
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: 'true'
     - name: Test in FreeBSD
       id: test
       uses: vmactions/freebsd-vm@v1
