Fallback to Thrust/CUB for CTK <12.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,9 +223,17 @@ if(USE_CUDA)
   find_package(CUDAToolkit REQUIRED)
   find_package(CCCL CONFIG)
   if(NOT CCCL_FOUND)
-    message(STATUS "Standalone CCCL not found. Attempting to use CCCL from CTK...")
-    find_package(CCCL REQUIRED CONFIG
+    message(STATUS "Standalone CCCL not found. Attempting to use CCCL from CUDA Toolkit...")
+    find_package(CCCL CONFIG
       PATHS ${CUDAToolkit_LIBRARY_DIR}/cmake/cccl)
+    if(NOT CCCL_FOUND)
+      message(STATUS "Could not locate CCCL from CUDA Toolkit. Using Thrust and CUB from CUDA Toolkit...")
+      find_package(Thrust CONFIG REQUIRED)
+      find_package(CUB CONFIG REQUIRED)
+      find_package(libcudacxx CONFIG REQUIRED)
+      add_library(CCCL::CCCL INTERFACE IMPORTED GLOBAL)
+      target_link_libraries(CCCL::CCCL INTERFACE Thrust::Thrust CUB::CUB libcudacxx::libcudacxx)
+    endif()
   endif()
 endif()
 
