Make fake CCCL target local

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -231,7 +231,7 @@ if(USE_CUDA)
       find_package(Thrust CONFIG REQUIRED)
       find_package(CUB CONFIG REQUIRED)
       find_package(libcudacxx CONFIG REQUIRED)
-      add_library(CCCL::CCCL INTERFACE IMPORTED GLOBAL)
+      add_library(CCCL::CCCL INTERFACE)
       target_link_libraries(CCCL::CCCL INTERFACE Thrust::Thrust CUB::CUB libcudacxx::libcudacxx)
     endif()
   endif()
