[jvm-packages] remove code link and make xgboost4j-spark-gpu depend on xgboost4j-spark

--- a/jvm-packages/pom.xml
+++ b/jvm-packages/pom.xml
@@ -92,20 +92,14 @@
             </modules>
         </profile>
 
-        <!-- gpu profile with both cpu and gpu test suites -->
         <profile>
             <id>gpu</id>
-            <activation>
-                <property>
-                    <name>use.cuda</name>
-                    <value>ON</value>
-                </property>
-            </activation>
             <properties>
                <use.cuda>ON</use.cuda>
             </properties>
             <modules>
                 <module>xgboost4j</module>
+                <module>xgboost4j-spark</module>
                 <module>xgboost4j-spark-gpu</module>
             </modules>
         </profile>
