Don't use :BOOL suffix

--- a/R-package/configure.ac
+++ b/R-package/configure.ac
@@ -34,15 +34,15 @@ AS_IF([test -z "${USE_LITTLE_ENDIAN+x}"], [
   AC_MSG_CHECKING([system endianness])
   AC_C_BIGENDIAN(
     [AC_MSG_RESULT([big endian])
-     ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN:BOOL=0"],
+     ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN=0"],
     [AC_MSG_RESULT([little endian])
-     ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN:BOOL=1"],
+     ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN=1"],
     [AC_MSG_RESULT([unknown])
      AC_MSG_ERROR([Could not determine endianness. Please set USE_LITTLE_ENDIAN])]
   )
 ], [
   AC_MSG_NOTICE([Forcing endianness to: ${USE_LITTLE_ENDIAN}])
-  ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN:BOOL=${USE_LITTLE_ENDIAN}"
+  ENDIAN_FLAG="-DDMLC_CMAKE_LITTLE_ENDIAN=${USE_LITTLE_ENDIAN}"
 ])
 
 OPENMP_CXXFLAGS=""
