Use AC_CONFIG_HEADERS

--- a/R-package/configure.ac
+++ b/R-package/configure.ac
@@ -84,4 +84,5 @@ AC_SUBST(OPENMP_LIB)
 AC_SUBST(ENDIAN_FLAG)
 AC_SUBST(BACKTRACE_LIB)
 AC_CONFIG_FILES([src/Makevars])
+AC_CONFIG_HEADERS([config.h])
 AC_OUTPUT
