--- a/tests/ci_build/conda_env/python_lint.yml
+++ b/tests/ci_build/conda_env/python_lint.yml
@@ -3,10 +3,10 @@ channels:
 - conda-forge
 dependencies:
 - python=3.10
-- pylint<3.2.4  # https://github.com/pylint-dev/pylint/issues/9751
+- pylint
 - wheel
 - setuptools
-- mypy
+- mypy!=1.11.1
 - numpy
 - scipy
 - pandas
