--- a/tests/ci_build/conda_env/python_lint.yml
+++ b/tests/ci_build/conda_env/python_lint.yml
@@ -6,7 +6,8 @@ dependencies:
 - pylint
 - wheel
 - setuptools
-- mypy!=1.11.1
+# https://github.com/python/mypy/issues/17617
+- mypy !=1.11.0,!=1.11.1
 - numpy
 - scipy
 - pandas
