--- a/tests/buildkite/pipeline.yml
+++ b/tests/buildkite/pipeline.yml
@@ -2,7 +2,6 @@ env:
   DOCKER_CACHE_ECR_ID: "492475357299"
   DOCKER_CACHE_ECR_REGION: "us-west-2"
 steps:
-  - timeout_in_minutes: 30
   - label: ":moneybag: Enforce daily budget"
     command: "tests/buildkite/enforce_daily_budget.sh"
     key: enforce-daily-budget
@@ -53,6 +52,7 @@ steps:
     agents:
       queue: linux-amd64-cpu
   - label: ":console: Build JVM packages"
+    timeout_in_minutes: 30
     command: "tests/buildkite/build-jvm-packages.sh"
     key: build-jvm-packages
     agents:
