--- a/tests/ci_build/Dockerfile.gpu_build_rockylinux8
+++ b/tests/ci_build/Dockerfile.gpu_build_rockylinux8
@@ -49,9 +49,14 @@ RUN git clone -b v${RAPIDS_VERSION_ARG}.00 https://github.com/rapidsai/rmm.git -
     rm -rf rmm
 
 # Install gRPC
+# Patch Abseil to apply https://github.com/abseil/abseil-cpp/issues/1629
 RUN git clone -b v1.65.4 https://github.com/grpc/grpc.git \
       --recurse-submodules --depth 1 && \
     pushd grpc && \
+    pushd third_party/abseil-cpp && \
+    git fetch origin master && \
+    git cherry-pick -n cfde5f74e276049727f9556f13473a59fe77d9eb && \
+    popd && \
     cmake -S . -B build -GNinja -DCMAKE_INSTALL_PREFIX=/opt/grpc -DCMAKE_CXX_VISIBILITY_PRESET=hidden && \
     cmake --build build --target install && \
     popd && \
