--- a/tests/ci_build/Dockerfile.cpu
+++ b/tests/ci_build/Dockerfile.cpu
@@ -2,7 +2,7 @@ FROM ubuntu:22.04
 
 # Environment
 ENV DEBIAN_FRONTEND=noninteractive
-SHELL ["/bin/bash", "-c"]   # Use Bash as shell
+SHELL ["/bin/bash", "-c"]
 
 # Install all basic requirements
 RUN \
@@ -26,7 +26,7 @@ ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/
 # Install gRPC
 # Patch Abseil to apply https://github.com/abseil/abseil-cpp/issues/1629
 RUN git clone -b v1.65.4 https://github.com/grpc/grpc.git \
-      --recurse-submodules --depth 1 --shallow-submodules && \
+      --recurse-submodules --depth 1 && \
     pushd grpc && \
     pushd third_party/abseil-cpp && \
     git fetch origin master && \
