Fix print exports for namespace

--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -10,8 +10,10 @@ S3method(getinfo,xgb.Booster)
 S3method(getinfo,xgb.DMatrix)
 S3method(length,xgb.Booster)
 S3method(predict,xgb.Booster)
+S3method(print,xgb.Booster)
 S3method(print,xgb.DMatrix)
 S3method(print,xgb.cv.synchronous)
+S3method(print,xgboost)
 S3method(setinfo,xgb.Booster)
 S3method(setinfo,xgb.DMatrix)
 S3method(variable.names,xgb.Booster)
@@ -20,8 +22,6 @@ export("xgb.attributes<-")
 export("xgb.config<-")
 export("xgb.parameters<-")
 export(getinfo)
-export(print.xgb.Booster)
-export(print.xgboost)
 export(setinfo)
 export(xgb.Callback)
 export(xgb.DMatrix)
