--- a/tests/ci_build/Dockerfile.clang_tidy
+++ b/tests/ci_build/Dockerfile.clang_tidy
@@ -11,8 +11,7 @@ RUN \
     apt-get update && \
     apt-get install -y wget git python3 python3-pip software-properties-common \
                        apt-transport-https ca-certificates gnupg-agent && \
-    apt-get install -y llvm-15 clang-tidy-15 clang-15 libomp-15-dev && \
-    apt-get install -y cmake
+    apt-get install -y llvm-15 clang-tidy-15 clang-15 libomp-15-dev
 
 # Set default clang-tidy version
 RUN \
@@ -24,7 +23,7 @@ RUN \
 
 # Install Python packages
 RUN \
-    pip3 install pyyaml
+    pip3 install pyyaml cmake
 
 ENV GOSU_VERSION=1.10
 
