--- a/tests/ci_build/Dockerfile.gpu_build_rockylinux8
+++ b/tests/ci_build/Dockerfile.gpu_build_rockylinux8
@@ -40,8 +40,11 @@ ENV GOSU_VERSION=1.10
 RUN git clone -b v${RAPIDS_VERSION_ARG}.00 https://github.com/rapidsai/rmm.git --recurse-submodules --depth 1 && \
     pushd rmm && \
     find . -name CMakeLists.txt -print0 | xargs -0 sed -i 's/-Werror//g' && \
-    cmake -B build -S . -GNinja -DCMAKE_INSTALL_PREFIX=/opt/rmm -DCUDA_STATIC_RUNTIME=ON && \
-    cmake --build build --target install && \
+    mkdir build && \
+    pushd build && \
+    cmake .. -GNinja -DCMAKE_INSTALL_PREFIX=/opt/rmm -DCUDA_STATIC_RUNTIME=ON && \
+    cmake --build . --target install && \
+    popd && \
     popd && \
     rm -rf rmm
 
