Revert "Remove custom tag generation"
This reverts commit fe3cf0e8786c7dc05e1deced3a1c92cd79094735.

--- a/python-package/pyproject.toml
+++ b/python-package/pyproject.toml
@@ -44,6 +44,8 @@ datatable = ["datatable"]
 plotting = ["graphviz", "matplotlib"]
 pyspark = ["pyspark", "scikit-learn", "cloudpickle"]
 
+[tool.hatch.build.targets.wheel.hooks.custom]
+
 [tool.isort]
 profile = "black"
 
