--- a/python-package/pyproject.toml
+++ b/python-package/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
 requires = [
-    "hatchling>=1.12.1"
+    "hatchling>=1.12.1",
+    "pip>=22.0"
 ]
 backend-path = ["."]
 build-backend = "packager.pep517"
