--- a/.github/runs-on.yml
+++ b/.github/runs-on.yml
@@ -4,13 +4,30 @@ images:
     arch: "x64"
     owner: "898082745236"  # AWS
     name: "Deep Learning Base OSS Nvidia Driver GPU AMI (Ubuntu 22.04)*"
+  windows-amd64:
+    platform: "windows"
+    arch: "x64"
+    owner: "492475357299"  # XGBooost CI
+    name: "xgboost-ci-runs-on-windows-*"
 
 runners:
   linux-amd64-cpu:
     cpu: 16
-    hdd: 40
     family: ["c7i-flex", "c7i", "c7a", "c5", "c5a"]
     image: ubuntu24-full-x64
   linux-amd64-gpu:
     family: ["g4dn.xlarge"]
     image: dlami-amd64
+  linux-amd64-mgpu:
+    family: ["g4dn.12xlarge"]
+    image: dlami-amd64
+  linux-arm64-cpu:
+    family: ["c6g", "c7g"]
+    image: ubuntu24-full-arm64
+  windows-gpu:
+    family: ["g4dn.2xlarge"]
+    image: windows-amd64
+  windows-cpu:
+    cpu: 16
+    family: ["c7i-flex", "c7i", "c7a", "c5", "c5a"]
+    image: windows-amd64
